20181122/content/kubernetes_novanet/kubernetes_deployment/02-a-real-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: superduperwebapp
spec:
  selector:
    matchLabels:
      app: superduperwebapp
  replicas: 3
  template:
    metadata:
      labels:
        app: superduperwebapp
    spec:
      containers:
      - name: superduperwebapp
        image: trondhindenes/superduperwebapp:v2
        livenessProbe:
          httpGet:
            path: /api/healthz
            port: 5000
            httpHeaders:
              - name: Host
                value: KubernetesLivenessProbe
          initialDelaySeconds: 15
        readinessProbe:
          httpGet:
            path: /api/healthz
            port: 5000
            httpHeaders:
              - name: Host
                value: KubernetesLivenessProbe
          initialDelaySeconds: 15
