20181122/content/kubernetes_novanet/kubernetes_deployment/04-a-real-ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    expose: external-httpsecure
  name: superduperwebapp
spec:
  rules:
  - host: superduperwebapp.dev.rikstv.no
    http:
      paths:
      - backend:
          serviceName: superduperwebapp
          servicePort: http
        path: /
